--- a/www/index.html
+++ b/www/index.html
@@ -24,8 +24,8 @@
 <template id='tabbar.html'>
 <ons-page>
 <ons-tabbar id='main-tabbar' position='bottom'>
-<ons-tab active class='active receive' icon='ion-md-arrow-down' label='Receive' page='receive.html'></ons-tab>
-<ons-tab class='send' icon='ion-md-arrow-up' label='Send' page='send.html'></ons-tab>
+<ons-tab class='active receive' icon='ion-md-arrow-down' label='Receive' page='receive.html'></ons-tab>
+<ons-tab active class='send' icon='ion-md-arrow-up' label='Send' page='send.html'></ons-tab>
 <ons-tab badge='2' class='transactions' icon='ion-md-list' label='Transactions' page='transactions.html'></ons-tab>
 </ons-tabbar>
 
@@ -50,7 +50,39 @@
 &nbsp;
 Scan QR
 </ons-button>
+<div class='s10'></div>
+<ons-button>
+<i class='ion-md-clipboard'></i>
+&nbsp;
+Paste
+</ons-button>
+<div class='s20'></div>
+<ons-list modifier='inset'>
+<ons-list-header class='t-center'>Recipient</ons-list-header>
+<ons-list-item>
+<div class='s10'></div>
+<p>
+<ons-input float='' modifier='underbar' placeholder='3address....' type='text'></ons-input>
+</p>
+</ons-list-item>
+<ons-list-header class='t-center'>Amount (bits)</ons-list-header>
+<ons-list-item>
+<div class='s30'></div>
+<p>
+<ons-input float='' modifier='underbar' placeholder='e.g. 1.000' type='text'></ons-input>
+</p>
+</ons-list-item>
+<ons-list-item>
+<div class='s10'></div>
+<p class='w-full t-center'>
+<ons-button class='centered' modifier='large' onclick='fn.walletSend()'>Send</ons-button>
+</p>
+</ons-list-item>
+</ons-list>
 </div>
+<ons-fab position='bottom right'>
+<ons-icon icon='ion-md-send'></ons-icon>
+</ons-fab>
 
 </ons-page>
 </template>
@@ -113,12 +145,40 @@ console.log("aaa")
 </div>
 </ons-toolbar>
 <div class='centered'>
-<div class='s30'></div>
-<ons-button>
-<i class='ion-md-qr-scanner'></i>
-&nbsp;
-Reload
-</ons-button>
+<ons-list class='transactions tx-list'>
+<ons-list-header>Today</ons-list-header>
+<ons-list-item>
+<div class='left'>
+<ons-icon class='list-item__icon' icon='ion-md-arrow-down'></ons-icon>
+</div>
+<div class='center'>
+Received 10.000 bits from '3Me2ZD....v9P'
+<span class='tx'>- tx: a1f2b1...</span>
+</div>
+</ons-list-item>
+<div class='s3'></div>
+<ons-list-header>Yesterday</ons-list-header>
+<ons-list-item>
+<div class='left'>
+<ons-icon class='list-item__icon' icon='ion-md-arrow-up'></ons-icon>
+</div>
+<div class='center'>
+Sent 3.000 bits to '3FhvRV....NDe'
+<span class='tx'>- tx: b23dc2...</span>
+</div>
+</ons-list-item>
+<div class='s3'></div>
+<ons-list-header>26/06/19</ons-list-header>
+<ons-list-item>
+<div class='left'>
+<ons-icon class='list-item__icon' icon='ion-md-arrow-down'></ons-icon>
+</div>
+<div class='center'>
+Received 26.000 bits from '386SqU....BJV'
+<span class='tx'>- tx: 45fe31...</span>
+</div>
+</ons-list-item>
+</ons-list>
 </div>
 
 </ons-page>
