--- a/www/index.html
+++ b/www/index.html
@@ -219,6 +219,7 @@ Settings
 </ons-splitter>
 </div>
 <script src='cordova.js' type='text/javascript'></script>
+<script src='node_modules/web3/dist/web3.umd.js' type='text/javascript'></script>
 <script src='js/index.js' type='text/javascript'></script>
 </body>
 </html>
