--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
 <link href='css/vendor/onsen-comp.css' rel='stylesheet'>
 <link href='css/vendor/onsen-theme.css' rel='stylesheet'>
 <link href='css/index.css' rel='stylesheet' type='text/css'>
-<title><3itcoin LN wallet</title>
+<title>xDAI wallet</title>
 
 <script>console.warn("Switch to Onsen minified!")</script>
 <script src='js/vendor/onsenui-dev.js'></script>
