remove test default values

--- a/www/index.html
+++ b/www/index.html
@@ -61,14 +61,14 @@ Paste
 <ons-list-item>
 <div class='s10'></div>
 <p>
-<ons-input class='recipient-address' float='' modifier='underbar' placeholder='Recipient' type='text' value='0x55f877D93972B39ADFE89694D7A195C7382BBAB7'></ons-input>
+<ons-input class='recipient-address' float='' modifier='underbar' placeholder='Recipient' type='text'></ons-input>
 </p>
 </ons-list-item>
 <ons-list-header class='t-center'></ons-list-header>
 <ons-list-item>
 <div class='s30'></div>
 <p>
-<ons-input class='send-amount' float='' modifier='underbar' placeholder='Amount (bits)' type='text' value='1'></ons-input>
+<ons-input class='send-amount' float='' modifier='underbar' placeholder='Amount (USD weis)' type='text'></ons-input>
 </p>
 </ons-list-item>
 <ons-list-item>
@@ -160,8 +160,8 @@ BALANCE
 <ons-icon class='list-item__icon' icon='ion-md-arrow-down'></ons-icon>
 </div>
 <div class='center'>
-Receiving 10.000 bits (0 conf.) from '3Me2ZD....v9P'
-<span class='tx'>tx: a1f2b1...</span>
+Receiving 10 USDs (0 conf.) from '0xadd4344....b31'
+<span class='tx'>tx: 0xa1f2b1...</span>
 </div>
 </ons-list-item>
 <div class='s3'></div>
@@ -171,8 +171,8 @@ Receiving 10.000 bits (0 conf.) from '3Me2ZD....v9P'
 <ons-icon class='list-item__icon' icon='ion-md-arrow-up'></ons-icon>
 </div>
 <div class='center'>
-Sent 3.000 bits to '3FhvRV....NDe'
-<span class='tx'>tx: b23dc2...</span>
+Sent 3.123 USDs to '0xadd43442....a23'
+<span class='tx'>tx: 0xb23dc2...</span>
 </div>
 </ons-list-item>
 <div class='s3'></div>
@@ -182,8 +182,8 @@ Sent 3.000 bits to '3FhvRV....NDe'
 <ons-icon class='list-item__icon' icon='ion-md-arrow-down'></ons-icon>
 </div>
 <div class='center'>
-Received 26.000 bits from '386SqU....BJV'
-<span class='tx'>tx: 45fe31...</span>
+Received 26.2 USD weis from '0xadd43443....a21'
+<span class='tx'>tx: 0x45fe31...</span>
 </div>
 </ons-list-item>
 </ons-list>
