--- a/www/index.html
+++ b/www/index.html
@@ -45,13 +45,13 @@
 </ons-toolbar>
 <div class='centered'>
 <div class='s30'></div>
-<ons-button>
+<ons-button class='btn-width-150'>
 <i class='ion-md-qr-scanner'></i>
 &nbsp;
 Scan QR
 </ons-button>
 <div class='s10'></div>
-<ons-button>
+<ons-button class='btn-width-150'>
 <i class='ion-md-clipboard'></i>
 &nbsp;
 Paste
