--- a/www/index.html
+++ b/www/index.html
@@ -11,8 +11,8 @@
 </style>
 <link href='css/vendor/ionic-icons.css' rel='stylesheet'>
 <link href='css/vendor/onsen.css' rel='stylesheet'>
-<link href='css/vendor/onsen-comp.css' rel='stylesheet'>
-<link href='css/vendor/onsen-theme.css' rel='stylesheet'>
+<link href='css/vendor/theme/onsen-css-components.min.css' rel='stylesheet'>
+<link href='css/vendor/theme/theme.css' rel='stylesheet'>
 <link href='css/index.css' rel='stylesheet' type='text/css'>
 <title>xDAI wallet</title>
 
@@ -45,30 +45,37 @@
 </ons-toolbar>
 <div class='centered'>
 <div class='s30'></div>
-<ons-button class='btn-width-150'>
+<ons-row>
+<ons-col></ons-col>
+<ons-col>
+<ons-button class='btn-width-150 btn btn-info'>
 <i class='ion-md-qr-scanner'></i>
 &nbsp;
 Scan QR
 </ons-button>
-<div class='s10'></div>
-<ons-button class='btn-width-150'>
+</ons-col>
+<ons-col></ons-col>
+<ons-col>
+<ons-button class='btn-width-150 btn btn-info'>
 <i class='ion-md-clipboard'></i>
 &nbsp;
 Paste
 </ons-button>
-<div class='s20'></div>
-<ons-list class='send-form' modifier='inset'>
+</ons-col>
+<ons-col></ons-col>
+</ons-row>
+<div class='s80'></div>
+<ons-list class='send-form'>
 <ons-list-item>
 <div class='s10'></div>
-<p>
-<ons-input class='recipient-address' float='' modifier='underbar' placeholder='Recipient' type='text'></ons-input>
+<p class='wfull'>
+<ons-input class='recipient-address wfull' float='' modifier='underbar' placeholder='Recipient' type='text'></ons-input>
 </p>
 </ons-list-item>
-<ons-list-header class='t-center'></ons-list-header>
 <ons-list-item>
 <div class='s30'></div>
-<p>
-<ons-input class='send-amount' float='' modifier='underbar' placeholder='Amount (USD weis)' type='text'></ons-input>
+<p class='wfull'>
+<ons-input class='send-amount wfull' float='' modifier='underbar' placeholder='Amount (USD weis)' type='text'></ons-input>
 </p>
 </ons-list-item>
 <ons-list-item>
@@ -98,7 +105,7 @@ Paste
 <div class='s50'></div>
 <div class='receive-screen centered'>
 <ons-list>
-<ons-list-header class='centered nopad'>Address</ons-list-header>
+<ons-list-header class='centered nopad bgtheme'>Address</ons-list-header>
 </ons-list>
 <div class='qr'>
 <img class='rel' src='assets/img/qr_sample.png'>
@@ -119,14 +126,14 @@ Paste
 <div class='s60'></div>
 <ons-list class='balances'>
 <!-- Balance -->
-<ons-list-header class='centered nopad'>
+<ons-list-header class='centered nopad bgtheme'>
 BALANCE
 </ons-list-header>
-<ons-list-header class='centered nopad balance'>
+<ons-list-header class='centered nopad balance bgtheme'>
 <span class='bal'>....</span>
 <span class='xp'>USD</span>
 </ons-list-header>
-<div class='centered'>
+<div class='centered bgtheme'>
 <a class='refresh-balance-btn'>
 <ons-icon icon='ion-md-refresh'></ons-icon>
 </a>
