--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
 <div class='right'>
 <ons-toolbar-button>
 <a class='refresh-btn' onclick='fn.refreshPage()'>
-<ons-icon icon='ion-md-settings'></ons-icon>
+<ons-icon class='icon-main-right icon-settings' icon='ion-md-settings'></ons-icon>
 </a>
 </ons-toolbar-button>
 </div>
@@ -48,16 +48,16 @@
 <ons-row>
 <ons-col></ons-col>
 <ons-col>
-<ons-button class='btn-width-150 btn btn-info'>
-<i class='ion-md-qr-scanner'></i>
+<ons-button class='btn-width-150 btn btn-info btn-scan button-scan'>
+<i class='ion-md-qr-scanner icons-scan'></i>
 &nbsp;
 Scan QR
 </ons-button>
 </ons-col>
 <ons-col></ons-col>
 <ons-col>
-<ons-button class='btn-width-150 btn btn-info'>
-<i class='ion-md-clipboard'></i>
+<ons-button class='btn-width-150 btn btn-info btn-paste button-paste'>
+<i class='ion-md-clipboard icons-paste'></i>
 &nbsp;
 Paste
 </ons-button>
@@ -97,7 +97,7 @@ Paste
 <ons-toolbar-button>
 <!-- TODO: bind click evt -->
 <a class='refresh-btn'>
-<ons-icon icon='ion-md-settings'></ons-icon>
+<ons-icon class='icon-main-right icon-settings' icon='ion-md-settings'></ons-icon>
 </a>
 </ons-toolbar-button>
 </div>
@@ -154,7 +154,7 @@ BALANCE
 <div class='right'>
 <ons-toolbar-button>
 <a class='refresh-btn' onclick='fn.refreshPage()'>
-<ons-icon icon='ion-md-settings'></ons-icon>
+<ons-icon class='icon-main-right icon-settings' icon='ion-md-settings'></ons-icon>
 </a>
 </ons-toolbar-button>
 </div>
@@ -205,7 +205,7 @@ Received 26.2 USD weis from '0xadd43443....a21'
 <div class='right'>
 <ons-toolbar-button>
 <a class='refresh-btn' onclick='fn.refreshPage()'>
-<ons-icon icon='ion-md-settings'></ons-icon>
+<ons-icon class='icon-main-right icon-settings' icon='ion-md-settings'></ons-icon>
 </a>
 </ons-toolbar-button>
 </div>
@@ -227,6 +227,8 @@ Reload
 </div>
 <script src='cordova.js' type='text/javascript'></script>
 <script src='js/lib/eth-keychain/bundle-lib.js' type='text/javascript'></script>
+<!-- / dev version imports - TODO: remove for open beta release -->
+<script src='js/lib/bind-unused-btns.js' type='text/javascript'></script>
 <script src='js/utils.js' type='text/javascript'></script>
 <script src='js/view.js' type='text/javascript'></script>
 <script src='js/app.js' type='text/javascript'></script>
