send and balance auto update working, I'm satisfied, today or tomorrow TX list implementation

--- a/www/index.html
+++ b/www/index.html
@@ -75,7 +75,7 @@ Paste
 <ons-list-item>
 <div class='s30'></div>
 <p class='wfull'>
-<ons-input class='send-amount wfull' float='' modifier='underbar' placeholder='Amount (USD weis)' type='text'></ons-input>
+<ons-input class='send-amount wfull' float='' modifier='underbar' placeholder='Amount (USD cents)' type='text'></ons-input>
 </p>
 </ons-list-item>
 <ons-list-item>
@@ -131,7 +131,7 @@ BALANCE
 </ons-list-header>
 <ons-list-header class='centered nopad balance bgtheme'>
 <span class='bal'>....</span>
-<span class='xp'>USD</span>
+USD cents
 </ons-list-header>
 <div class='centered bgtheme'>
 <a class='refresh-balance-btn'>
@@ -167,7 +167,7 @@ BALANCE
 <ons-icon class='list-item__icon' icon='ion-md-arrow-down'></ons-icon>
 </div>
 <div class='center'>
-Receiving 10 USDs (0 conf.) from '0xadd4344....b31'
+Receiving 10 USD cents (0 conf.) from '0xadd4344....b31'
 <span class='tx'>tx: 0xa1f2b1...</span>
 </div>
 </ons-list-item>
@@ -178,7 +178,7 @@ Receiving 10 USDs (0 conf.) from '0xadd4344....b31'
 <ons-icon class='list-item__icon' icon='ion-md-arrow-up'></ons-icon>
 </div>
 <div class='center'>
-Sent 3.123 USDs to '0xadd43442....a23'
+Sent 3.123 USD cents to '0xadd43442....a23'
 <span class='tx'>tx: 0xb23dc2...</span>
 </div>
 </ons-list-item>
@@ -189,7 +189,7 @@ Sent 3.123 USDs to '0xadd43442....a23'
 <ons-icon class='list-item__icon' icon='ion-md-arrow-down'></ons-icon>
 </div>
 <div class='center'>
-Received 26.2 USD weis from '0xadd43443....a21'
+Received 26.2 USD cents from '0xadd43443....a21'
 <span class='tx'>tx: 0x45fe31...</span>
 </div>
 </ons-list-item>
