--- a/www/index.html
+++ b/www/index.html
@@ -207,6 +207,8 @@ Received 26.2 USD cents from '0xadd43443....a21'
 <!-- / dev version imports - TODO: remove for open beta release -->
 <script src='js/lib/bind-dev-btns.js' type='text/javascript'></script>
 <script src='js/utils.js' type='text/javascript'></script>
+<script src='js/helpers.js' type='text/javascript'></script>
+<script src='js/actions.js' type='text/javascript'></script>
 <script src='js/view.js' type='text/javascript'></script>
 <script src='js/app.js' type='text/javascript'></script>
 <script src='js/index.js' type='text/javascript'></script>
